--- a/keppler-src/client/src/index.css
+++ b/keppler-src/client/src/index.css
@@ -1,13 +1,353 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    box-sizing: border-box;
+}
+main {
+	min-height: 94vh;
+	background-color: #FFF;
+}
+.mg-top {
+	margin-top: 90px;
+}
+a {
+	text-decoration: none;
+}
+.large-btn {
+	font-size: 3.25rem;
+}
+.hr-text {
+	background: linear-gradient(to right, transparent, #000000, transparent);
+	line-height: 24px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* header */
+.bg-body-tertiary {
+	background-color: #2190FF !important;
 }
+.search-bar {
+	background-color: #080065 !important;
+}
+.search-icon {
+	position: absolute;
+	padding: 4px;
+	right: 0px;
+	top: 50%;
+	transform: translateY(-50%);
+	color: black;
+	background-color: #ffc107;
+	border-radius: 5px;
+	font-size: 40px;
+	cursor: pointer;
+}
+.navbar-text,
+.navbar-brand,
+.nav-link{
+	color: #FFF !important;
+}
+.full-height-button {
+	position: absolute;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	top: 50%;
+	transform: translateY(-50%);
+	height: 100%;
+	width: fit-content;
+	margin: 0;
+	margin-left: -11px;
+}
+.navbar-nav {
+	white-space: nowrap;
+}
+.nav-adjusted {
+	margin-left: 60px;
+}
+
+/* cards */
+.product-card{
+	position: relative;
+	width: 100%;
+	max-width: 18rem;
+	height: auto;
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 20px;
+}
+.product-badge {
+	position: absolute;
+	top: 0;
+  	right: 0;
+  	transform: translate(0%, 0%);
+  	white-space: nowrap;
+}
+.product-card img{
+	height: 20rem;
+	width: 100%;
+	object-fit: cover;
+}
+.product-title {
+	display: block; 
+	overflow: hidden;
+	padding-left: 5px;
+	padding-top: 10px;
+	padding-right: 5px;
+	font-size: medium; 
+	line-height: 1.2;
+	height: 8rem;
+}
+.product-price {
+	font-size: 20px;
+	font-weight: 600;
+	margin-left: 2px;
+}
+.card-body {
+	overflow: hidden;
+	display: flex;
+	padding: 0px;
+	flex-direction: column;
+	justify-content: space-between; 
+	flex-grow: 1; 
+}
+.ratings-and-views-container {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+}
+.product-rating-and-reviews {
+	display: flex;
+	flex-direction: row;
+	padding-left: 10px;
+	padding-bottom: 10px;
+	font-size: medium;
+
+} 
+.product-rating-and-reviews i {
+	color: #ffc107;
+} 
+.tooltip > div.tooltip-inner {
+	background-color: #FFF !important;
+	color: black !important;
+	background-color: #FFF;
+	color: black;
+	border: 1px solid #ccc;
+	padding-right: 0.5rem;
+	padding-bottom: 1rem;
+	padding-top: 1rem;
+	padding-left: 1rem;
+	width: auto;
+	min-width: 20rem;
+}
+.tooltip.show {
+	opacity: 1 !important;
+}
+.tooltip.bs-tooltip-bottom .tooltip-arrow::before {
+    border-bottom-color: #ccc !important;
+}
+.review-bar-container {
+	flex-grow: 1;
+	height: 20px;
+	background-color: #e9ecef;
+	border: 1px solid #ccc;
+	border-radius: 2px;
+	overflow: hidden;
+}
+.review-bar-blank {
+	height: 100%;
+	background-color: #e9ecef;
+	border-radius: 2px;
+}
+.review-bar {
+	height: 100%;
+	background-color: #ffc107;
+	border-radius: 2px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.review-percentage {
+	font-size: small;
+	color: black;
+	font-weight: bold;
+	text-align: center;
+}
+.product-view-count {
+	padding-right: 10px;
+	padding-bottom: 10px;
+	font-size: medium;
+	color: black;
+}
+
+/* Responsive adjustments */
+/* For tablets/ipad screens */
+@media (max-width: 768px) {
+	.product-card {
+	  max-width: 100%;
+	}
+	.product-title, .product-price, .product-badge {
+	  font-size: medium;
+	}  
+	.ratings-and-views-container {
+		display: inline-flex;
+		flex-direction: row;
+		justify-content: space-between;
+		align-items: center;
+		width: 100%;
+	}
+	.product-rating-and-reviews, .product-view-count {
+		font-size: medium;
+		color: black;
+	
+	} 
+  }
+/* For phone screens */
+@media (max-width: 480px) {
+	.product-card{
+		flex-direction: row;
+		align-items: center;
+	}
+	.product-badge {
+		left: 0;
+		font-size: x-small;
+		width: min-content;
+		padding: 0.2rem;
+	}
+	.product-card img{
+		height: 15rem;
+		width: 50%;
+	}
+	.card-body {
+		display: flex;
+		width: 50%;
+		flex-direction: column; 
+		justify-content:space-between;
+		padding: 0.5rem;
+	}
+	.product-title {
+		padding-left: 0px;
+		padding-top: 0px;
+		padding-right: 0px;
+		font-size: x-small;
+		font-weight: 200;
+		width: fit-content; 
+		height: 4.2rem;
+	}
+	.product-price {
+		font-size: small;
+		font-weight: bold;
+		margin-left: 0px;
+	}
+	.ratings-and-views-container {
+		flex-direction: column;
+		align-items: flex-start;
+	}
+	.product-rating-and-reviews, .product-view-count {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		gap: 5px;
+		padding-left: 0px;
+		padding-right: 0px;
+		font-size: small; 
+
+	}
+	.product-divider {
+		display: none;
+	}
+}
+
+/* footer */
+footer {
+	background-color: #0000001c;
+}
+.nav-icon {
+	margin-top: -8px !important;
+}
+.notfound {
+	margin-top: 20rem;
+}
+h1.notfound {
+	font-size: 7rem;
+}
+.broken-heart {
+	font-size: 7rem;
+	color: crimson;
+}
+
+/* homepage background image */
+.bg-image-container{
+	display: flex;
+	justify-content: center;
+}
+.bg-image-container > header {
+	width: 94%;
+	box-sizing: border-box;
+  }
+.main-bg-image {
+	background-attachment: scroll;
+	background-color: initial;
+	background-image: 
+		url("./images/homeImage.jpeg");
+	background-position: center center;
+	background-repeat: no-repeat no-repeat;
+	background-size: cover;
+}
+.masthead {
+	box-sizing: border-box;
+	color: #212529;
+	font-family: Nunito, -apple-system, "system-ui", "Segoe UI", Roboto,
+		"Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
+		"Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+	letter-spacing: 1px;
+	padding: 0;
+	position: relative;
+	width: 94%;
+	height: 100%;
+}
+.popular-places{
+	background-color: #FFF;
+	height: 20vh;
+	position: absolute;
+	width: 85%;
+	border: 1px solid #707070;
+	opacity: 0.9;
+}
+.best-deals{
+	background-color: #FFF;
+	height: 35vh;
+	position: absolute;
+	width: 85%;
+	border: 1px solid #707070;
+	opacity: 0.9;
+}
+
+/* spinner */
+.spinner-container {
+	position: fixed;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background-color: rgba(0, 0, 0, 0.5);
+	z-index: 5000;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+  }
+  
+  .spinner {
+	width: 100px;
+	height: 100px;
+	border: 10px solid;
+	border-color: #ffc107 transparent #080065 transparent;
+	border-radius: 50%;
+	animation: spin 1.2s linear infinite;
+  }
+  
+  @keyframes spin {
+	from {
+	  transform: rotate(0deg);
+	}
+	to {
+	  transform: rotate(360deg);
+	}
+  }
