--- a/keppler-src/client/src/index.css
+++ b/keppler-src/client/src/index.css
@@ -665,3 +665,52 @@ h1.notfound {
 	  transform: rotate(360deg);
 	}
   }
+
+  /* deals page */
+  .header-section {
+	width: 100vw;
+	max-width: 100%;
+	padding: 0; 
+	overflow: hidden;
+  }
+  
+  .header-section .hero-content h1 {
+	color: #fff;
+	text-shadow: 0 2px 4px rgba(0,0,0,0.5);
+	font-size: 2.5rem; 
+	margin-bottom: 20px; 
+  }
+  
+  .header-section .hero-content p {
+	color: #f8f9fa; 
+	font-size: 1.2rem; 
+	max-width: 60%; 
+	text-shadow: 0 1px 3px rgba(0,0,0,0.5); 
+  }
+
+.section-highlight {
+	display: flex;
+	justify-content: center;
+	text-align: center;
+	background-color: rgba(255, 255, 255, 0.8);
+	border-radius: 15px; 
+	padding: 20px; 
+	margin-bottom: 50px;
+  }
+  
+  .section-highlight h2 {
+	color: #333; 
+	margin-bottom: 15px; 
+	font-weight: 700; 
+  }
+  
+  .section-highlight p {
+	color: #666; 
+	line-height: 1.6; 
+  }
+  
+  @media (max-width: 768px) {
+	.section-highlight {
+	  padding: 15px;
+	}
+  }
